ci: update github actions workflow for java 23 and multi-module support